Cynthia's rewrite of bullet for lookahead bound

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -298,8 +298,8 @@ We will discuss these in depth throughout the following sections:
 \item Lower bounds on a prefix also hold for every extension of that prefix.
 (\S\ref{sec:hierarchical}, Theorem~\ref{thm:bound})
 
-\item We can sometimes prune all rule lists that are longer than a given prefix,
-even without knowing anything about what rules will be placed below that prefix.
+\item If a rule list is not accurate enough with respect to its length,
+we can prune all extensions of it.
 (\S\ref{sec:hierarchical}, Lemma~\ref{lemma:lookahead})
 
 \item We can calculate \emph{a priori} an upper bound on the maximum length
