Add ProPublica rule lists for all CV folds

--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -11,6 +11,7 @@
 \def\belif{{\bf else if~}}
 \def\bthen{{\bf then predict~}}
 \def\belse{{\bf else predict~}}
+\def \band{{\bf ~and~}}
 
 \def\E{\mathbb{E}}
 \def\P{\mathbb{P}}
