--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -19,9 +19,9 @@ These approaches achieve high accuracy while also managing to run reasonably qui
 \begin{arxiv}
 \begin{figure}[t!]
 \begin{algorithmic}
-\State \bif $(age=23-25) \wedge (priors=2-3)$ \bthen $yes$
+\State \bif $(age=23-25) \band (priors=2-3)$ \bthen $yes$
 \State \belif $(age=18-20)$ \bthen $yes$
-\State \belif $(sex=male) \wedge (age=21-22)$ \bthen $yes$
+\State \belif $(sex=male) \band (age=21-22)$ \bthen $yes$
 \State \belif $(priors>3)$ \bthen $yes$
 \State \belse $no$
 \end{algorithmic}
@@ -74,9 +74,9 @@ with the careful use of algorithms, data structures, and implementation techniqu
 \vspace{-3mm}
 \begin{algorithmic}
 \normalsize
-\State \bif $(age=23-25) \wedge (priors=2-3)$ \bthen $yes$
+\State \bif $(age=23-25) \band (priors=2-3)$ \bthen $yes$
 \State \belif $(age=18-20)$ \bthen $yes$
-\State \belif $(sex=male) \wedge (age=21-22)$ \bthen $yes$
+\State \belif $(sex=male) \band (age=21-22)$ \bthen $yes$
 \State \belif $(priors>3)$ \bthen $yes$
 \State \belse $no$
 \end{algorithmic}
