--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -19,8 +19,21 @@ with recent, publicly-available datasets:
 \begin{itemize}
 \item Predicting which individuals in the ProPublica COMPAS
 dataset~\citep{LarsonMaKiAn16} recidivate within two years.
+The dataset contains records for 7,215 individuals.
+%
 \item Using the NYCLU 2014 stop-and-frisk dataset~\citep{nyclu:2014} to predict
 whether a weapon will be found on a stopped individual who is frisked or searched.
+%
+From the original dataset of 45,787 records, each describing an incident involving
+a stopped person, we identify a subset of 29,595 records for which the individual
+was frisked and/or searched (Appendix~C).
+%
+Of these, criminal possession of a weapon was identified in about only 5\% of instances.
+%
+To address the class imbalance for this problem,  we sample records from the
+smaller class with replacement; in our 10-fold cross-validation experiments,
+each fold contains 50,743 datapoints.~\footnote{We generate cross-validation folds fist,
+and then resample within each fold.}
 \end{itemize}
 %
 Our choice of and approach to the second problem is inspired by the work
@@ -179,7 +192,7 @@ Small circles mark associated training accuracy means.
 %
 Top:  Two-year recidivism prediction for the ProPublica COMPAS dataset.
 %
-None of the models exhibit significant overfitting:
+None of the models exhibit significant overfitting --
 mean training accuracy never exceeds mean test accuracy
 by more than about 0.01.
 %
