--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -261,3 +261,10 @@ for the individual's age -- we eliminate those with age $< 12$ or $>89$;
 we also assume that one age marked `366' is a typo, and we replace it with `36'.
 %
 This yields a set of 29,595 records in which the individual was frisked and/or searched.
+%
+To address the class imbalance for this problem, we sample records from the
+smaller class with replacement.
+%
+We generate cross-validation folds first, and then resample within each fold.
+%
+In our 10-fold cross-validation experiments, each fold contains 50,743 datapoints.
