Minor edits from Cynthia Skype comments 3/17

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -563,7 +563,7 @@ The
 \end{kdd}
 bound in Theorem~\ref{thm:min-capture}
 depends on the antecedents, but not the label predictions,
-and thus doesn't account for misclassification error.
+and thus does not account for misclassification error.
 %
 \begin{arxiv}
 Theorem~\ref{thm:min-capture-correct} gives a tighter bound
@@ -1161,7 +1161,7 @@ starts with~$\PrefixB$ and contains~$p$ among its remaining antecedents.
 %
 Since~$p$ captures a subset of the data that~$\Prefix$ captures,
 and~$\PrefixB$ captures the same data as~$\Prefix$,
-it follows that~$p$ doesn't capture any data in~$\PrefixB''$, \ie
+it follows that~$p$ does not capture any data in~$\PrefixB''$, \ie
 \begin{align}
 \frac{1}{N} \sum_{n=1}^N \Cap(x_n, p \given \PrefixB'') = 0 \le \Reg.
 \end{align}
