--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -334,8 +334,9 @@ This gives an upper bound on the number of remaining prefix evaluations:
 \begin{align}
 \Remaining(\CurrentObj, \Queue)
 \le \sum_{\Prefix \in Q} \sum_{k=0}^{U(\Prefix) - L(\Prefix)} P(M - L(\Prefix), k)
-= \sum_{\Prefix \in Q} \sum_{k=0}^{f(\Prefix)} \frac{(M - L(\Prefix))!}{(M - L(\Prefix) - k)!}.
+= \sum_{\Prefix \in Q} \sum_{k=0}^{f(\Prefix)} \frac{(M - L(\Prefix))!}{(M - L(\Prefix) - k)!}\,,
 \end{align}
+where~$P(m, k)$ denotes the number of $k$-permutations of~$m$.
 \end{arxiv}
 \begin{kdd}
 \begin{align}
