--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -92,7 +92,7 @@ and C4.5 uses complexity parameter ${C = 0.25}$.
 \caption{Example optimal rule lists that predict two-year recidivism for the
 ProPublica dataset, found by CORELS, across 10 cross-validation folds.
 %
-The most common rule list was found by 6 folds (top),
+The most common of these was found by 6 folds (top),
 the next was found by 2 folds (middle), and the last by 1 fold (bottom).
 %
 We observe that all of these rule lists start with the same rule,
@@ -179,9 +179,9 @@ to those found via other algorithms.
 %\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
 % left lower right upper
 \includegraphics[trim={12mm, 0mm, 24mm, 5mm},
-width=0.68\textwidth]{figs/compas-sparsity-training.pdf}
+width=0.8\textwidth]{figs/compas-sparsity-training.pdf}
 \includegraphics[trim={12mm, 5mm, 24mm, 1mm},
-width=0.68\textwidth]{figs/frisk-sparsity-training.pdf}
+width=0.8\textwidth]{figs/frisk-sparsity-training.pdf}
 \end{center}
 \caption{Training and test accuracy as a function of model size.
 %
@@ -223,10 +223,11 @@ For both problems, CORELS can learn short rule lists without sacrificing accurac
 %\includegraphics[width=0.65\textwidth]{figs/sketch-objective.png}
 % left lower right upper
 \includegraphics[trim={20mm, 15mm, 24mm, 15mm},
-width=0.75\textwidth]{figs/compas_execution-remaining-space.pdf}
+width=0.7\textwidth]{figs/compas_execution_large-remaining-space.pdf}
 \end{center}
 \caption{CORELS with (lines) and without
-(dashes) the equivalent points bound (Theorem~\ref{thm:identical}).
+(dashes) the equivalent points bound (Theorem~\ref{thm:identical}),
+for the ProPublica dataset.
 %
 Top: Objective value (thin line) and lower bound (thick line) for CORELS,
 as a function of wall clock time (log scale).
@@ -238,14 +239,18 @@ and are labeled by the new length.
 CORELS quickly achieves the optimal value (star marker),
 and certifies optimality when the lower bound matches the objective value.
 %
-A separate execution of CORELS without the equivalent points bound remains
-far from complete, and its lower bound (dashed line) far from the optimum.
+A separate execution of CORELS without the equivalent points (Theorem~\ref{thm:identical})
+bound remains far from complete, and its lower bound (dashed line) far from the optimum.
 %
 Bottom: $\lfloor \log_{10} \Remaining(\CurrentObj, \Queue) \rfloor$,
 as a function of wall clock time (log scale),
 where~$\Remaining(\CurrentObj, \Queue)$
 is the upper bound on remaining search space size
 (Theorem~\ref{thm:remaining-eval-fine}).
+%
+For this problem, the equivalent points bound is responsible for the ability of
+CORELS to quickly eliminate most of the search space (solid line);
+the remaining search space decays much more slowly without this bound (dashed line).
 }
 \label{fig:objective}
 \end{figure}
@@ -316,11 +321,11 @@ in the final row, we report the minimum values across folds. \\
 \label{tab:ablation}
 \end{table}
 %
-\begin{figure}[b!]
+\begin{figure}[t!]
 \begin{center}
 % left lower right upper
 \includegraphics[trim={30mm 10mm 35mm 30mm},
-width=0.85\textwidth]{figs/kdd_compas_ablation-queue.pdf}
+width=\textwidth]{figs/kdd_compas_ablation-queue.pdf}
 \end{center}
 \caption{Logical queue composition.
 %
