--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -269,7 +269,7 @@ steadily converges to the optimal objective as the search space shrinks.
 
 Finally, we determine the efficacy of each of our bounds and data structure optimizations.
 %
-Both panels of Figure~\ref{fig:objective} also highlight a separate
+Both panels of Figure~\ref{fig:objective} additionally highlight a separate
 execution of CORELS without the equivalent points bound.
 %
 After nearly 3 hours, the execution is still far from complete;
