Typo -- NYCLU not ProPublica

--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -249,7 +249,7 @@ By~\eqref{eq:similar-analogous},
 
 \section*{Appendix C. Data processing details}
 
-\textbf{ProPublica recidivism dataset.} The original dataset contains 45,787 records,
+\textbf{NYCLU stop-and-frisk dataset.} The original dataset contains 45,787 records,
 each describing an incident involving a stopped person; the individual
 was frisked in 30,345 (66.3\%) of records and and searched in 7,283 (15.9\%).
 %
