Fix error caught by Cynthia -- training sets not folds

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -34,7 +34,7 @@ was frisked and/or searched.
 %
 Of these, criminal possession of a weapon was identified in only about 5\% of instances.
 %
-Resampling due to class imbalance, for 10-fold cross-validation, yields folds
+Resampling due to class imbalance, for 10-fold cross-validation, yields training sets
 that each contain 50,743 datapoints.~\footnote{For further details about these
 preprocessing steps, see Appendix~C.}
 \end{itemize}
