--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -267,4 +267,4 @@ smaller class with replacement.
 %
 We generate cross-validation folds first, and then resample within each fold.
 %
-In our 10-fold cross-validation experiments, each fold contains 50,743 datapoints.
+In our 10-fold cross-validation experiments, each training set contains 50,743 datapoints.
