Quiet a couple ISBN and ISSN numbers

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -362,7 +362,7 @@ author = {K. P. Bennett and J. A. Blue},
 
 @article{NijssenFromont2010,
 year={2010},
-issn={1384-5810},
+__issn={1384-5810},
 journal={Data Mining and Knowledge Discovery},
 volume={21},
 number={1},
@@ -508,7 +508,7 @@ author={R{\"u}ping, S.},
 
 @incollection{bratko1997machine,
 year={1997},
-isbn={978-3-211-82910-3},
+__isbn={978-3-211-82910-3},
 booktitle={Learning, Networks and Statistics},
 volume={382},
 series={International Centre for Mechanical Sciences},
@@ -700,7 +700,7 @@ pages = {2864--2870}
 @article{Schmueli10,
 __author = {Shmueli, Galit},
 author = {Shmueli, G.},
-    issn = {0883-4237},
+    __issn = {0883-4237},
     journal = {Statistical Science},
     keywords = {prediction, statistics},
     month = {August},
