--- a/paper/sections/incremental.tex
+++ b/paper/sections/incremental.tex
@@ -213,11 +213,11 @@ number of observations~$N$
     \State $\mathbf{f} \gets \mathbf{u} \wedge \neg\,\mathbf{v} $ \Comment{Bit vector indicating data not captured by $\PrefixB$}
     \State $n_f = \Count(\mathbf{f})$ \Comment{Number of data not captured by $\PrefixB$}
     \State $\mathbf{g} \gets \mathbf{f} \wedge \y$ \Comment{Bit vector indicating data not captured by $\PrefixB$ with label $1$}
-    \State $n_g = \Count(\mathbf{w})$ \Comment{Number of data not captued by $\PrefixB$ with label $1$}
-    \If {$n_f / n_g > 0.5$}
-        \State \Return $(n_f - n_g) / N$ \Comment{Default rule misclassification error with label $1$}
+    \State $n_g = \Count(\mathbf{g})$ \Comment{Number of data not captued by $\PrefixB$ with label $1$}
+    \If {$n_g / n_f > 0.5$}
+        \State \Return $(n_f - n_g) / N$ \Comment{Misclassification error of default label prediction $1$}
     \Else
-        \State \Return $n_g / N$ \Comment{Default rule misclassification error with label $0$}
+        \State \Return $n_g / N$ \Comment{Misclassification error of default label prediction $0$}
     \EndIf
 \EndFunction
 \end{algorithmic}
