Add statement relating two bounds on prefix evals (Cynthia)

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -375,12 +375,14 @@ where~$P(m, k)$ denotes the number of $k$-permutations of~$m$.
 \end{proof}
 
 \begin{arxiv}
-Our first
+Proposition~\ref{thm:ub-total-eval} is strictly weaker than
+Theorem~\ref{thm:remaining-eval-fine} and is the starting point for its derivation.
+It
 \end{arxiv}
 \begin{kdd}
-The
+The proposition below
 \end{kdd}
-proposition below is a na\"ive upper bound on
+is a na\"ive upper bound on
 the total number of prefix evaluations over the course of
 Algorithm~\ref{alg:branch-and-bound}'s execution.
 %
