Updated experiments section.
Added description of COMPAS dataset and added algorithmic speedup
calculation from Nicholas' thesis.

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1418,3 +1418,14 @@ booktitle={Twelfth International Conference on Machine Learning {(ICML)}},
 pages={115--123}, 
 year={1995}
 }
+
+@article{Bertsimas16,
+  title={Best subset selection via a modern optimization lens},
+  author={Bertsimas, Dimitris and King, Angela and Mazumder, Rahul},
+  journal={The Annals of Statistics},
+  volume={44},
+  number={2},
+  pages={813--852},
+  year={2016},
+  publisher={Institute of Mathematical Statistics}
+}
